@@ -1,3 +1,9 @@
+2009-12-15  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* NSSavePanel-test/NSSavePanel-test.m: Add field to supply a list
+	of allowed file type extension to the save panel and a button to
+	control whether the panel allows other file type extensions.
+
 2009-12-05  Quentin Mathe  <quentin.mathe@gmail.com>
 
 	* NSOutlineView-test/NSOutlineView-test.m: Added new expandable items
